# Physcial-Simulation-Final-Project

./: .gitignore  README.md  make_timelapse.py  plot_optimization.py  pyproject.toml
data/floor_bounce/: orig.avi  orig.json  orig.traj.npz
data/random/: orig.json  orig.traj.npz
data/spring_oscillate/: orig.avi  orig.json  orig.traj.npz
logs/floor_bounce_floor_bounce/: optim_log.csv
logs/floor_bounce_floor_bounce/frames/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  20.json  21.json  4.json  6.json  7.json  8.json  9.json
logs/random_mass_spring_k/: optim_log copy.csv  optim_log.csv
logs/random_mass_spring_k/frames/: 1.json  10.json  100.json  101.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  (+61 more)
logs/spring_oscillate_damping_stiffness/: optim_log.csv
logs/spring_oscillate_gravity_g/: optim_log.csv
logs/spring_oscillate_mass/: optim_log.csv
logs/spring_oscillate_spring_k/: optim_log.csv
logs/spring_oscillate_timestep/: optim_log.csv
scripts/: run_spring_oscillation.sh
src/pygoo/: __init__.py  app.py  config.py  optimize.py  state.py  trajectory.py
src/pygoo/io/: __init__.py  (+2 more)
tests/: test_differentiable_fitter.py  test_differentiable_pipeline.py  test_forces.py  test_integration.py  test_scene_io.py  test_trajectory_tools.py
(+104 files in other folders)
