[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pygoo"
version = "0.1.0"
description = "Python-first goo simulation with PyTorch physics and pygame UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "imageio>=2.36",
  "imageio-ffmpeg>=0.5",
  "pygame-ce>=2.5.3",
  "pygame_gui>=0.6.9",
  "PyYAML>=6.0.1",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
pygoo = "pygoo.app:main"
pygoo-traj-compare = "pygoo.trajectory_compare:main"
pygoo-demo-setup = "pygoo.demo_setup:main"
pygoo-demo-plots = "pygoo.demo_plots:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
